kubernetes/apps/home-automation/home-assistant-external/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-external
  namespace: home-automation
spec:
  hostnames:
    - ha.pitower.link
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: home-assistant-external
          port: 8123
